final verion on production

--- a/templates/catalog_form.html
+++ b/templates/catalog_form.html
@@ -4,7 +4,7 @@
       <h3>Edit {{catalog.name}} Catalog</h3>
     </div>
     <div class="modal-body" style="max-height:550px">
-        <form class="form-horizontal" method="post" id="catalog_form" action="/catalog/edit/update/">
+        <form class="form-horizontal" method="post" id="catalog_form" action="/wip/catalog/edit/update/">
           <input type="hidden" name="id" value="{{catalog.id}}">
           <div class="control-group">
             <label for="catalog_name" class="control-label">Name</label>
