--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -1,6 +1,6 @@
 <form class="well form-inline" onSubmit="return false;">
-    <input type="text" placeholder="Start Date" class="input-medium" name="start_date">
-    <input type="text" placeholder="End Date" class="input-medium" name="end_date">
+    <input type="text" placeholder="Start Date" class="input-medium" name="start_date" value="">
+    <input type="text" placeholder="End Date" class="input-medium" name="end_date" value="">
     <button class="btn" id="load_search" >Load data by date</button>
     <button class="btn" id="load_all" >Load all data </button>
 </form>
