--- a/templates/base.html
+++ b/templates/base.html
@@ -30,11 +30,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/home/" >WIP Viewer</a>
+          <a class="brand" href="/wip/home/" >WIP Viewer</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="/home/">Home</a></li>
-              <li><a href="/admin/" target="_blank">Administrator</a></li>
+              <li class="active"><a href="/wip/home/">Home</a></li>
               <!--
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
@@ -46,13 +45,15 @@
               <li class="dropdown">
                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">Personal<b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="/personal/">Base Information</a></li>
-                  <li><a href="/password/">Reset Password</a></li>
+                  <li><a href="/wip/personal/">Base Information</a></li>
+                  <li><a href="/wip/password/">Reset Password</a></li>
                   <li class="divider"></li>
-                  <li><a href="/logout/">Log Out</a></li>
+                  <li><a href="/wip/logout/">Log Out</a></li>
                 </ul>
               </li>
             </ul>
+            {% else %}
+
             {% endif %}
           </div><!--/.nav-collapse -->
         </div>
