--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
     <input type="password" name="password" value="" id="password">
 
     <input type="submit" value="login" />
-    <input type="hidden" name="next" value="/home/" />
+    <input type="hidden" name="next" value="/wip/home/" />
   </form>
 
 {% endblock %}
